Resolve "As an administrator, I want to list all languages"
