# backend/internal/core/ports/controller/impl/LanguageControllerImpl.go
@@ -48,3 +48,25 @@ func (l LanguageControllerImpl) Create(w http.ResponseWriter, r *http.Request) {
 	utils.CreateResponse(w, http.StatusCreated, user)
 	log.Printf("%s: end", tools.GetCurrentFuncName())
 }
+
+// swagger:route GET /languages Languages FindAllLanguages
+// Return all languages.
+//
+// Responses:
+// - 200: []Language
+// - 400: ErrorDto
+// - 401: ErrorDto
+// - 500: ErrorDto
+func (l LanguageControllerImpl) FindAll(w http.ResponseWriter, r *http.Request) {
+	log.Printf("%s: start", tools.GetCurrentFuncName())
+	if user := utils.CheckUserIsAdmin(w, r, l.userService); user == nil {
+		return
+	}
+	stages, err := l.languageService.FindAll()
+	if err != nil {
+		utils.CreateErrorResponse(w, err, http.StatusInternalServerError)
+		return
+	}
+	utils.CreateResponse(w, http.StatusOK, stages)
+	log.Printf("%s: end", tools.GetCurrentFuncName())
+}
