# backend/swagger/swagger.json
@@ -18,6 +18,42 @@
   "basePath": "/",
   "paths": {
     "/languages": {
+      "get": {
+        "tags": [
+          "Languages"
+        ],
+        "summary": "Return all languages.",
+        "operationId": "FindAllLanguages",
+        "responses": {
+          "200": {
+            "description": "Language",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Language"
+              }
+            }
+          },
+          "400": {
+            "description": "ErrorDto",
+            "schema": {
+              "$ref": "#/definitions/ErrorDto"
+            }
+          },
+          "401": {
+            "description": "ErrorDto",
+            "schema": {
+              "$ref": "#/definitions/ErrorDto"
+            }
+          },
+          "500": {
+            "description": "ErrorDto",
+            "schema": {
+              "$ref": "#/definitions/ErrorDto"
+            }
+          }
+        }
+      },
       "post": {
         "consumes": [
           "application/json"
